--- a/playground/index.html
+++ b/playground/index.html
@@ -3,6 +3,8 @@
   <head>
     <title>ngx-messenger Playground</title>
     <base href="/">
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Polyfill(s) for older browsers -->
